2010-03-07  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-edit-replace-at-point): New defun
	to call `twittering-edit-length-check' forcefully.
	(twittering-edit-mode-map): Bind F4 to it instead of
	`twittering-tinyurl-replace-at-point'.
	(twittering-edit-length-check): Make all arguments optional.

2010-03-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-server-info-alist): new variable
	for storing server information.
	(twittering-http-status-line-regexp): removed.

	* twittering-mode.el (twittering-display-remaining): new variable
	for specifying whether the remaining of rate limit should be
	displayed on the mode line or not.
	(twittering-update-mode-line): display the remaining of rate limit
	if `twittering-display-remaining' is non-nil.
	(twittering-get-ratelimit-remaining): new function.
	(twittering-get-ratelimit-limit): new function.

2010-03-06  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el: Use the new versioned API endpoint at
	"api.twitter.com/1" instead of the legacy API endpoint to fit
	twitter API specification as of 2010-02-17.
	(twittering-timeline-spec-to-host-method): Likewise.
	(twittering-host-method-to-timeline-spec): Likewise.
	(twittering-edit-post-status): Likewise.
	(twittering-update-status-from-minibuffer): Likewise.
	(twittering-manage-friendships): Likewise.
	(twittering-manage-favorites): Likewise.
	(twittering-update-lambda): Likewise.
	(twittering-update-jojo): Likewise.
	(twittering-http-post): Update a comment.

	* twittering-mode.el (twittering-http-get-default-sentinel): Add
	an additional information which is related to obsolete
	public_timeline.

	* twittering-mode.el (twittering-http-post): Set parameter
	`source' here.
	(twittering-edit-post-status): Adjust callers.
	(twittering-update-status-from-minibuffer): Likewise.
	(twittering-manage-friendships): Likewise.
	(twittering-manage-favorites): Likewise.
	(twittering-update-lambda): Likewise.