@@ -1,3 +1,10 @@
+2010-03-09  Tadashi MATSUO  <tad@mymail.twin.jp>
+
+	* twittering-mode.el (twittering-redisplay-status-on-buffer): call
+	`func' with the region.
+	(twittering-make-passed-time-string): restore the original
+	properties.
+
 2010-03-07  Satoshi Yatagawa  <yata_github@y.hauN.org>
 
 	* twittering-mode.el (twittering-edit-replace-at-point): New defun
